--- a/.github/workflows/update_jira_status_in_review.yml
+++ b/.github/workflows/update_jira_status_in_review.yml
@@ -1,26 +1,63 @@
 name: Update Status - in review
+
 on:
   pull_request:
-    types: [ ready_for_review, review_requested ]
+    types: [ready_for_review, review_requested]
+
+permissions:
+  pull-requests: read
 
 jobs:
   action-jira-status-update:
     runs-on: ubuntu-latest
+
     steps:
-      - name: determine associated issue id
+      - name: Extract Jira Ticket IDs
         id: get-jira
         run: |
-          echo "looking for Jira issue key"
-          title="${{github.event.pull_request.title}}"
-          echo "PR title [$title]"
-          ticket_id=`echo $title | awk -F" " '{print $1}'`
-          echo "ticket_id [$ticket_id]"
-          if echo $ticket_id | grep -Eqx '[A-Z]+-[0-9]+'; then
-            echo "we found it"
-            echo "ticket-id=[$ticket_id]" 
-            curl -v -X POST --url $USER_AND_KEY_FOR_JIRA --header "Accept: application/json" --header "Content-Type: application/json" -d "{\"transition\":{\"id\":\"41\"}}"
+          echo "Searching for Jira ticket IDs in PR title and body..."
+
+          title="${{ github.event.pull_request.title }}"
+          body="${{ github.event.pull_request.body }}"
+
+          echo "PR title: $title"
+          echo "PR body: $body"
+
+          > tickets.txt
+
+          # Extract all Jira tickets from title (e.g. "ABC-123 DEF-456")
+          echo "$title" | grep -oE '[A-Z]+-[0-9]+' >> tickets.txt || true
+
+          # Extract from all 'Fixes' lines in the body (case-insensitive, flexible whitespace)
+          echo "$body" | grep -iE '^Fixes[[:space:]]*:[[:space:]]*[A-Z]+-[0-9]+' | \
+          grep -oE '[A-Z]+-[0-9]+' >> tickets.txt || true
+
+          # Deduplicate and show final list
+          sort -u tickets.txt > unique_tickets.txt
+          cat unique_tickets.txt
+          
+          if [[ ! -s unique_tickets.txt ]]; then
+            echo "No Jira tickets found in PR title or body. Skipping Jira update."
+            echo "ticket-ids=" >> $GITHUB_OUTPUT
+            exit 0  # Exit gracefully
           fi
-  
 
+          tickets_csv=$(paste -sd, unique_tickets.txt)
+          echo "Final ticket list: $tickets_csv"
+          echo "ticket-ids=$tickets_csv" >> $GITHUB_OUTPUT
 
-
+      - name: Transition Jira Tickets to 'In Review'
+        if: steps.get-jira.outputs.ticket-ids != ''
+        env:
+          JIRA_AUTH: ${{ secrets.USER_AND_KEY_FOR_JIRA_AUTOMATION }}
+        run: |
+          IFS=',' read -ra tickets <<< "${{ steps.get-jira.outputs.ticket-ids }}"
+          for ticket_id in "${tickets[@]}"; do
+            echo "Transitioning Jira ticket: $ticket_id"
+            curl --fail -X POST \
+              --url "https://scylladb.atlassian.net/rest/api/3/issue/${ticket_id}/transitions" \
+              --user "$JIRA_AUTH" \
+              --header "Accept: application/json" \
+              --header "Content-Type: application/json" \
+              -d '{"transition": {"id": "121"}}'
+          done
