Add OpenAPI documentation and automated generation tool
This commit establishes system for generating and managing the project's REST API documentation (OpenAPI).

Key changes include:

- Automated Generation: A new generate-openapi binary creates the api/openapi.json spec directly from the application's routes. It is runnable via a convenient cargo openapi alias.
- dev-tools feature: To prevent installing/building the 'generate-openapi' tool in production.
- CI Verification: An integration test runs in the CI pipeline to guarantee that the committed openapi.json is synced with routes.
- Documentation Enhancements:
    - Added the API title, description, and license information.
    - Corrected the schema to ensure KeyspaceName and IndexName are included.
    - Fixed a minor typo in the Distance field description.

Closes: VS-30

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,16 @@
 name = "vector-store"
 version = "0.1.0"
 edition = "2024"
+default-run = "vector-store"
+
+[[bin]]
+name = "generate-openapi"
+path = "src/bin/generate-openapi.rs"
+required-features = ["dev-tools"]
 
 [features]
 default = []
+dev-tools = []
 
 [dependencies]
 anyhow = "1.0.97"
