--- a/Cargo.toml
+++ b/Cargo.toml
@@ -46,7 +46,7 @@ utoipa-axum = "0.2.0"
 utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
 uuid = "1.16.0"
 prometheus = "0.14"
-
+vector-store-macros = { path = "./vector-store-macros" }
 
 [dev-dependencies]
 reqwest = { version = "0.12.15", features = ["json"] }
