Use workspace package keys
For easier maintenance creates can use keys from workspace Cargo.toml.
This patch introduce usage of workspace's version & edition keys.

Reference: VECTOR-107

--- a/crates/vector-store/Cargo.toml
+++ b/crates/vector-store/Cargo.toml
@@ -5,8 +5,8 @@
 
 [package]
 name = "vector-store"
-version = "0.1.0"
-edition = "2024"
+version.workspace = true
+edition.workspace = true
 default-run = "vector-store"
 
 [[bin]]
