--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,10 @@ members = ["crates/*"]
 default-members = ["crates/vector-store"]
 resolver = "3"
 
+[workspace.package]
+version = "0.1.0"
+edition = "2024"
+
 [workspace.dependencies]
 anyhow = "1.0.97"
 async-trait = "0.1.88"
