--- a/crates/vector-store/Cargo.toml
+++ b/crates/vector-store/Cargo.toml
@@ -23,6 +23,7 @@ anyhow.workspace = true
 async-trait.workspace = true
 axum.workspace = true
 bimap.workspace = true
+dashmap = "6.1.0"
 derive_more.workspace = true
 dotenvy.workspace = true
 futures.workspace = true
