--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -8,3 +8,6 @@ edition.workspace = true
 
 [dependencies]
 clap.workspace = true
+tokio.workspace = true
+tracing.workspace = true
+tracing-subscriber.workspace = true
