vector-store: refactor monitor_indexes tests' actors
This patch creates a mockable actors for db & engine using traits and mockall
crate. It simplifies managing of background actors using mocking infrastructure
- you can define mocks using functions, you don't need spawning tasks yourself.

Reference: VECTOR-143

--- a/crates/vector-store/Cargo.toml
+++ b/crates/vector-store/Cargo.toml
@@ -51,4 +51,5 @@ utoipa-swagger-ui.workspace = true
 uuid.workspace = true
 
 [dev-dependencies]
+mockall.workspace = true
 reqwest.workspace = true
