--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -11,6 +11,7 @@ clap.workspace = true
 futures.workspace = true
 hickory-server.workspace = true
 httpclient.workspace = true
+scylla.workspace = true
 tempfile.workspace = true
 tokio.workspace = true
 tracing.workspace = true
