--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,13 +25,13 @@ itertools = "0.14.0"
 macros = { path = "crates/macros" }
 mockall = "0.13.1"
 ntest = "0.9.3"
-opensearch = { version = "2.3.0" }
+opensearch = { version = "2.3.0", default-features = false, features = ["rustls-tls"] }
 proc-macro2 = "1.0"
 prometheus = "0.14"
 quote = "1.0"
 rayon = "1.10.0"
 regex = "1.11.1"
-reqwest = { version = "0.12.15", features = ["json"] }
+reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
 scylla = { version = "1.2.0", features = ["time-03"] }
 scylla-cdc = "0.4.0"
 serde = { version = "1.0.219", features = ["derive"] }
