--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -9,6 +9,7 @@ edition.workspace = true
 [dependencies]
 clap.workspace = true
 futures.workspace = true
+hickory-server.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
