--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -10,7 +10,9 @@ edition.workspace = true
 clap.workspace = true
 futures.workspace = true
 hickory-server.workspace = true
+httpclient.workspace = true
 tempfile.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+vector-store.workspace = true
