--- a/Cargo.toml
+++ b/Cargo.toml
@@ -37,6 +37,7 @@ scylla-cdc = "0.4.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 syn = { version = "2.0", features = ["full"] }
+tempfile = "3.20.0"
 thiserror = "2.0.12"
 time = { version = "0.3.41", features = ["formatting"] }
 tokio = { version = "1.44.1", features = ["full"] }
