--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -10,6 +10,7 @@ edition.workspace = true
 clap.workspace = true
 futures.workspace = true
 hickory-server.workspace = true
+tempfile.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
