--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -37,10 +37,10 @@ jobs:
       run: cargo clippy --version
 
     - name: Format check
-      run: cargo fmt --all -- --check
+      run: cargo fmt --all --check
 
     - name: Clippy check
-      run: cargo clippy --all-targets
+      run: cargo clippy --all-targets --workspace -- -Dwarnings
 
   tests:
     runs-on: ubuntu-latest
@@ -54,4 +54,4 @@ jobs:
       run: rustc --version
 
     - name: Run tests
-      run: cargo test --features dev-tools --verbose
+      run: cargo test --features dev-tools --verbose --all-targets --workspace
