Rename 'embedding' to 'vector' in public API
Maintain backward compatibility through serde field aliasing to support existing clients using the "embedding" field name.

References: VECTOR-148

--- a/crates/httpclient/Cargo.toml
+++ b/crates/httpclient/Cargo.toml
@@ -10,3 +10,4 @@ edition.workspace = true
 reqwest.workspace = true
 serde_json.workspace = true
 vector-store.workspace = true
+serde.workspace = true
