--- a/crates/httpclient/Cargo.toml
+++ b/crates/httpclient/Cargo.toml
@@ -7,6 +7,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+anyhow.workspace = true
 reqwest.workspace = true
 serde_json.workspace = true
 vector-store.workspace = true
