--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ edition = "2024"
 
 [workspace.dependencies]
 anyhow = "1.0.97"
+arrow-array = "56.0.0"
 async-trait = "0.1.88"
 axum = { version = "0.8.1", features = ["macros"] }
 bimap = "0.6.3"
@@ -21,14 +22,17 @@ dotenvy = "0.15.7"
 futures = "0.3.31"
 hickory-server = "0.25.2"
 httpclient = { path = "crates/httpclient" }
+humantime = "2.2.0"
 itertools = "0.14.0"
 macros = { path = "crates/macros" }
 mockall = "0.13.1"
 ntest = "0.9.3"
 opensearch = { version = "2.3.0", default-features = false, features = ["rustls-tls"] }
+parquet = { version = "56.0.0", features = ["async"] }
 proc-macro2 = "1.0"
 prometheus = "0.14"
 quote = "1.0"
+rand = "0.9.2"
 regex = "1.11.1"
 reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
 scylla = { version = "1.2.0", features = ["time-03"] }
@@ -40,6 +44,7 @@ tempfile = "3.20.0"
 thiserror = "2.0.12"
 time = { version = "0.3.41", features = ["formatting"] }
 tokio = { version = "1.44.1", features = ["full"] }
+tokio-stream = { version = "0.1.17", features = ["full"] }
 tower-http = { version = "0.6.2", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
