Add ScyllaDB authentication support
This commit enables the vector-store service to authenticate with ScyllaDB using a username and password.

Credentials are provided via environment variables:
- `VECTOR_STORE_SCYLLADB_USERNAME`: The database username.
- `VECTOR_STORE_SCYLLADB_PASSWORD_FILE`: The path to a file containing the password.

The password is read from the specified file and trimmed of whitespace. Using a file for the password enhances security by preventing the secret from being exposed in the environment or process list.

Unit tests are included to verify various configuration scenarios, including missing credentials, invalid configurations, and successful loading.

References: VECTOR-67

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -50,3 +50,4 @@ utoipa-axum = "0.2.0"
 utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
 uuid = "1.16.0"
 vector-store = { path = "crates/vector-store" }
+secrecy = "0.10.3"
