--- a/crates/vector-store/Cargo.toml
+++ b/crates/vector-store/Cargo.toml
@@ -37,6 +37,7 @@ rayon.workspace = true
 regex.workspace = true
 scylla.workspace = true
 scylla-cdc.workspace = true
+secrecy.workspace = true
 serde.workspace = true
 serde_json.workspace = true
 thiserror.workspace = true
@@ -55,3 +56,4 @@ uuid.workspace = true
 mockall.workspace = true
 reqwest.workspace = true
 httpclient.workspace = true
+tempfile.workspace = true
