--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -16,4 +16,5 @@ tempfile.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
+uuid.workspace = true
 vector-store.workspace = true
