validator: create validator crates
This commit is the first from a set of changes which refactor single validator
crate into the several of them.  It is needed to allow building validator from
both repositories - from scylladb and vector-store using same common
functionality and test file sources from both repositories.

The set of validator crates:
- vector-search-validator: the crate with very simple `main` function - defined
  in both repositories; it depends only on vector-search-engine
- vector-search-validator-engine: the crate with the engine for running tests -
  defined only in vector-store; it depends on vector-search-validator-tests,
  vector-search-validator-vector-store, vector-search-validator-scylla
- vector-search-validator-tests: the crate with common functionality for all
  tests - defined only in vector-store
- vector-search-validator-vector-store: the crate with tests defined only in
  vector-store; it depends on vector-search-validator-tests
- vector-search-validator-scylla: the crate with tests defined only in
  scylla; it depends on vector-search-validator-tests

--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -17,4 +17,5 @@ tokio.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 uuid.workspace = true
+vector-search-validator-engine.workspace = true
 vector-store.workspace = true
