--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,5 +52,9 @@ utoipa = { version = "5.3.1", features = ["axum_extras"] }
 utoipa-axum = "0.2.0"
 utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
 uuid = "1.16.0"
+vector-search-validator-engine = { path = "crates/validator-engine" }
+vector-search-validator-scylla = { path = "crates/validator-scylla" }
+vector-search-validator-tests = { path = "crates/validator-tests" }
+vector-search-validator-vector-store = { path = "crates/validator-vector-store" }
 vector-store = { path = "crates/vector-store" }
 secrecy = "0.10.3"
