--- a/crates/validator/Cargo.toml
+++ b/crates/validator/Cargo.toml
@@ -3,19 +3,8 @@
 
 [package]
 name = "vector-search-validator"
-version = "0.1.0"
+version.workspace = true
 edition.workspace = true
 
 [dependencies]
-clap.workspace = true
-futures.workspace = true
-hickory-server.workspace = true
-httpclient.workspace = true
-scylla.workspace = true
-tempfile.workspace = true
-tokio.workspace = true
-tracing.workspace = true
-tracing-subscriber.workspace = true
-uuid.workspace = true
 vector-search-validator-engine.workspace = true
-vector-store.workspace = true
