--- a/crates/validator-tests/Cargo.toml
+++ b/crates/validator-tests/Cargo.toml
@@ -7,5 +7,9 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+httpclient.workspace = true
+scylla.workspace = true
 tokio.workspace = true
 tracing.workspace = true
+uuid.workspace = true
+vector-store.workspace = true
