--- a/crates/validator-tests/Cargo.toml
+++ b/crates/validator-tests/Cargo.toml
@@ -7,6 +7,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+futures.workspace = true
 httpclient.workspace = true
 scylla.workspace = true
 tokio.workspace = true
