--- a/crates/validator-vector-store/Cargo.toml
+++ b/crates/validator-vector-store/Cargo.toml
@@ -7,4 +7,7 @@ version.workspace = true
 edition.workspace = true
 
 [dependencies]
+scylla.workspace = true
+tokio.workspace = true
+tracing.workspace = true
 vector-search-validator-tests.workspace = true
