--- a/deny.toml
+++ b/deny.toml
@@ -133,13 +133,19 @@ exceptions = [
 # Each entry is a crate relative path, and the (opaque) hash of its contents
 #{ path = "LICENSE", hash = 0xbd0eed23 }
 #]
+[[licenses.clarify]]
+crate = "vector-search-validator-scylla"
+expression = "LicenseRef-ScyllaDB-Source-Available-1.0"
+license-files = [
+    { path = "../../../../LICENSE-ScyllaDB-Source-Available.md", hash = 0x6bf4a064 }
+]
 
 [licenses.private]
 # If true, ignores workspace crates that aren't published, or are only
 # published to private registries.
 # To see how to mark a crate as unpublished (to the official registry),
 # visit https://doc.rust-lang.org/cargo/reference/manifest.html#the-publish-field.
-ignore = false
+ignore = true
 # One or more private registries that you might publish crates to, if a crate
 # is only published to private registries, and ignore is true, the crate will
 # not have its license(s) checked
@@ -238,7 +244,7 @@ allow-git = []
 
 [sources.allow-org]
 # github.com organizations to allow git sources for
-github = []
+github = ["scylladb"]
 # gitlab.com organizations to allow git sources for
 gitlab = []
 # bitbucket.org organizations to allow git sources for
