--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -55,3 +55,22 @@ jobs:
 
     - name: Run tests
       run: cargo test --features dev-tools --verbose --all-targets --workspace
+
+  cargo-machete:
+    runs-on: ubuntu-latest
+    steps:
+    - uses: actions/checkout@v4
+
+    - name: Setup rust toolchain
+      uses: actions-rust-lang/setup-rust-toolchain@v1
+
+    - name: Setup cargo-machete
+      uses: baptiste0928/cargo-install@v3
+      with:
+        crate: cargo-machete
+
+    - name: Print cargo-machete version
+      run: cargo machete --version
+
+    - name: Run cargo-machete checks
+      run: cargo machete
