--- a/crates/benchmark/Cargo.toml
+++ b/crates/benchmark/Cargo.toml
@@ -19,6 +19,7 @@ rand.workspace = true
 scylla.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
+toml.workspace = true
 tracing.workspace = true
 tracing-subscriber.workspace = true
 uuid.workspace = true
