benchmark: refactor parquet to use toml config
The commit introduces dataset.toml file as a configuration for dataset. Using
this file benchmark is able to use a correct format of dataset.

The commit refactors parquet to use configurable variables from dataset.toml
instead of compiled ones.

--- a/crates/benchmark/Cargo.toml
+++ b/crates/benchmark/Cargo.toml
@@ -16,6 +16,7 @@ humantime.workspace = true
 itertools.workspace = true
 parquet.workspace = true
 rand.workspace = true
+serde.workspace = true
 scylla.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
