vector-store: add rustls dependency for TLS support
This patch introduces rustls dependencies as a preparation step for
adding certificate-based TLS support to the vector-store service.

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -28,6 +28,8 @@ itertools = "0.14.0"
 macros = { path = "crates/macros" }
 mockall = "0.13.1"
 ntest = "0.9.3"
+rustls = "0.23"
+rustls-pemfile = "2"
 opensearch = { version = "2.3.0", default-features = false, features = ["rustls-tls"] }
 parquet = { version = "56.0.0", features = ["async"] }
 prometheus = "0.14"
@@ -35,7 +37,7 @@ quote = "1.0"
 rand = "0.9.2"
 regex = "1.11.1"
 reqwest = { version = "0.12.15", default-features = false, features = ["json", "rustls-tls"] }
-scylla = { version = "1.2.0", features = ["time-03"] }
+scylla = { version = "1.2.0", features = ["time-03", "rustls-023"] }
 scylla-cdc = "0.5.0"
 serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
