--- a/crates/vector-store/Cargo.toml
+++ b/crates/vector-store/Cargo.toml
@@ -32,6 +32,8 @@ futures.workspace = true
 itertools.workspace = true
 macros.workspace = true
 ntest.workspace = true
+rustls.workspace = true
+rustls-pemfile.workspace = true
 opensearch.workspace = true
 prometheus.workspace = true
 regex.workspace = true
