vector_store: Add HTTPS support for REST API
Add VECTOR_STORE_TLS_CERT_PATH and VECTOR_STORE_TLS_KEY_PATH environment
variables to configure TLS certificate and private key paths. When both
are specified, the REST API serves over HTTPS instead of HTTP.

--- a/crates/vector-store/Cargo.toml
+++ b/crates/vector-store/Cargo.toml
@@ -23,6 +23,7 @@ dev-tools = []
 anyhow.workspace = true
 async-trait.workspace = true
 axum.workspace = true
+axum-server = { version = "0.7.2", features = ["tls-rustls"] }
 bimap.workspace = true
 clap.workspace = true
 dashmap = "6.1.0"
@@ -60,3 +61,5 @@ mockall.workspace = true
 reqwest.workspace = true
 httpclient.workspace = true
 tempfile.workspace = true
+temp-env = "0.3.6"
+rcgen = "0.14.5"
