vector-store: implement usearch simulator
The commit implements simulator mode for usearch index. The simulator is
helpful when you need to test whole add/ann pipeline with simulation of usearch
work without running it (it consumes a lot of memory resources).

Env variable VECTOR_STORE_USEARCH_SIMULATES provides parameters for it: it is a
list of human readable durations, delimiter is ':' with such items:

- search duration
- add or remove duration
- reserver duration

The simulator ignores vector values, search results are random. The simulator
waits for specified time for reserve/add/remove/search operations - it
simulates time which usearch will spend on each operation.

--- a/crates/vector-store/Cargo.toml
+++ b/crates/vector-store/Cargo.toml
@@ -30,6 +30,7 @@ dashmap = "6.1.0"
 derive_more.workspace = true
 dotenvy.workspace = true
 futures.workspace = true
+humantime.workspace = true
 itertools.workspace = true
 macros.workspace = true
 ntest.workspace = true
@@ -37,6 +38,7 @@ rustls.workspace = true
 rustls-pemfile.workspace = true
 opensearch.workspace = true
 prometheus.workspace = true
+rand.workspace = true
 regex.workspace = true
 scylla.workspace = true
 scylla-cdc.workspace = true
