ci: add specific scylla-nightly version for tests
Current scylla-nightly version has bugs with vector-store client. The change
setups the specific version of scylla-nightly for better ci experience.

--- a/.github/workflows/validator.yml
+++ b/.github/workflows/validator.yml
@@ -32,5 +32,6 @@ jobs:
       run: ./scripts/run-with-release-toolchain cargo build --release --workspace
 
     - name: Run the Validator tests
-      run: ./scripts/run-validator-with-scylla-docker scylladb/scylla-nightly target/amd64/release/vector-store target/amd64/release/vector-search-validator --verbose
+
+      run: ./scripts/run-validator-with-scylla-docker scylladb/scylla-nightly:2026.1.0-dev-0.20251117.f0039381d22c target/amd64/release/vector-store target/amd64/release/vector-search-validator --verbose
 
