vector-store: configure the memory actor with env params
The commit adds two env parameters:
- VECTOR_STORE_MEMORY_LIMIT: to provide the limit for used memory, after
  reaching this limit vector-store cannot allocate more data for index; the
  value is the number of bytes
- VECTOR_STORE_MEMORY_USAGE_CHECK_INTERVAL: to provide duration how frequent
  the vector-store should check memory usage; the value is human readable (ie.
  `10ms`)

The commit implements configuration change.

The commit changes the meaning of MEMORY_ALLOCATION_THRESHOLD - from the
percent of free memory to the percent of available memory.

The commit adds refactoring enum Allocate, to not repeat struct name
(Allocate::CanAllocate -> Allocate::Can).

--- a/crates/vector-store/Cargo.toml
+++ b/crates/vector-store/Cargo.toml
@@ -64,4 +64,5 @@ reqwest.workspace = true
 httpclient.workspace = true
 tempfile.workspace = true
 temp-env = "0.3.6"
+tracing-test.workspace = true
 rcgen = "0.14.5"
