--- a/Cargo.toml
+++ b/Cargo.toml
@@ -52,6 +52,7 @@ toml = "0.9.8"
 tower-http = { version = "0.6.2", features = ["full"] }
 tracing = "0.1.41"
 tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
+tracing-test = "0.2.5"
 usearch = "2.21.3"
 utoipa = { version = "5.3.1", features = ["axum_extras"] }
 utoipa-axum = "0.2.0"
