validator: implement test for limit memory
The commit creates a new test case: `memory_limit`. The test case has no common
initialization function as it needs specific params and sequence of starting
vector-store cluster.

The commit creates a new test in the case: `memory_limit_during_index_build`.

--- a/crates/validator-vector-store/Cargo.toml
+++ b/crates/validator-vector-store/Cargo.toml
@@ -8,7 +8,9 @@ edition.workspace = true
 license.workspace = true
 
 [dependencies]
+httpclient.workspace = true
 scylla.workspace = true
+sysinfo.workspace = true
 tokio.workspace = true
 tracing.workspace = true
 vector-search-validator-tests.workspace = true
