--- a/Cargo.toml
+++ b/Cargo.toml
@@ -43,6 +43,7 @@ serde = { version = "1.0.219", features = ["derive"] }
 serde_json = "1.0.140"
 syn = { version = "2.0", features = ["full"] }
 sysinfo = "0.37.2"
+tap = "1.0.1"
 tempfile = "3.20.0"
 thiserror = "2.0.12"
 time = { version = "0.3.41", features = ["formatting"] }
