--- a/crates/benchmark/Cargo.toml
+++ b/crates/benchmark/Cargo.toml
@@ -18,6 +18,7 @@ parquet.workspace = true
 rand.workspace = true
 serde.workspace = true
 scylla.workspace = true
+tap.workspace = true
 tokio.workspace = true
 tokio-stream.workspace = true
 toml.workspace = true
