vector-store: switch from rustls-pemfile to rustls-pki-types
As cargo-deny has labeled rustls-pemfile as unmaintained according to
RUSTSEC-2025-0134 we need to switch to rust-pki-types to support loading der
certificates. The commit refactors db.rs to support rust-pki-types.

Fixes: VECTOR-396

--- a/crates/vector-store/Cargo.toml
+++ b/crates/vector-store/Cargo.toml
@@ -35,7 +35,7 @@ itertools.workspace = true
 macros.workspace = true
 ntest.workspace = true
 rustls.workspace = true
-rustls-pemfile.workspace = true
+rustls-pki-types.workspace = true
 opensearch.workspace = true
 prometheus.workspace = true
 rand.workspace = true
