--- a/Cargo.toml
+++ b/Cargo.toml
@@ -29,7 +29,7 @@ macros = { path = "crates/macros" }
 mockall = "0.13.1"
 ntest = "0.9.3"
 rustls = "0.23"
-rustls-pemfile = "2"
+rustls-pki-types = "1.13.1"
 opensearch = { version = "2.3.0", default-features = false, features = ["rustls-tls"] }
 parquet = { version = "56.0.0", features = ["async"] }
 prometheus = "0.14"
